--- a/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb
+++ b/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb
@@ -37,6 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# device=0 usara la GPU y device=-1 usara la CPU\n",
     "classifier = pipeline(task = \"zero-shot-image-classification\", \n",
     "                      model = \"openai/clip-vit-large-patch14\",\n",
     "                      device = 0)"
@@ -150,10 +151,58 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35a6989a-f47d-4bb3-aec4-f6d746deed92",
+   "id": "5778b62c-2f68-479c-9cd1-167b6c3932e7",
    "metadata": {},
    "source": [
     "### Ejercicio 1:\n",
+    "\n",
+    "Clasificar las [imagenes de bananas maduras](https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/bananas/) y frescas utilizando un modelo de zero-shot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfab6752-1333-4f84-b97c-7bfd44299909",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34a7076e-b2cc-41f4-952e-71e75adc97b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1:\n",
+    "\n",
+    "import requests\n",
+    "from PIL import Image\n",
+    "from transformers import pipeline\n",
+    "classifier = pipeline(task = \"zero-shot-image-classification\", \n",
+    "                      model = \"openai/clip-vit-large-patch14\",\n",
+    "                      device = -1)\n",
+    "\n",
+    "# Lista de nombres de las imagenes\n",
+    "nombres_imagenes = [f'normal{i}.jpeg' for i in range(1,6)]\n",
+    "nombres_imagenes.extend([f'madura{i}.jpeg' for i in range(1,6)])\n",
+    "PATH = 'https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/bananas/'\n",
+    "for nombre_imagen in nombres_imagenes:\n",
+    "    response = requests.get(PATH + nombre_imagen)\n",
+    "    with Image.open(BytesIO(response.content)) as img:\n",
+    "        predictions = classifier(image, candidate_labels=[\"banana\",\"ripe banana\"])\n",
+    "        print(nombre_imagen, predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35a6989a-f47d-4bb3-aec4-f6d746deed92",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 2:\n",
     "\n",
     "Clasificar las siguientes peliculas por genero, terror o comedia, utilizando zero shot classification para texto. Probar diferentes modelos y comparar sus resultados.\n",
     "\n",
@@ -209,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Solucion Ejercicio 1: Paso 1 {display-mode:\"form\"}\n",
+    "#@title Solucion Ejercicio 2: Paso 1 {display-mode:\"form\"}\n",
     "\n",
     "# Como el texto no esta en formato de tabla \n",
     "# uso regex para darle el formato que quiero\n",
@@ -274,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Solucion Ejercicio 1: Paso 2 {display-mode:\"form\"}\n",
+    "#@title Solucion Ejercicio 2: Paso 2 {display-mode:\"form\"}\n",
     "\n",
     "# Probamos un modelo zero shot con la primera pelicula\n",
     "from transformers import pipeline\n",
@@ -292,14 +341,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Solucion Ejercicio 1: Paso 3 {display-mode:\"form\"}\n",
+    "#@title Solucion Ejercicio 2: Paso 3 {display-mode:\"form\"}\n",
     "\n",
     "# Probamos el modelo con todas las peliculas y calculamos el accuracy\n",
     "N = len(df)\n",
     "accuracy = 0\n",
     "for i in range(N):\n",
     "    result = clasificador(df.iloc[i,:][\"Titulo\"],posibles_clases)\n",
-    "    print(f\"{i}: Real:{df.iloc[i,:]['Genero']} Predecido:{result['labels'][0]}\")\n",
+    "    print(f\"{i}: Real:{df.iloc[i,:]['Genero']} Predicho:{result['labels'][0]}\")\n",
     "    if df.iloc[i,:]['Genero'] == result['labels'][0]:\n",
     "        accuracy += 1\n",
     "print(f\"Total accuracy:{accuracy/N}\")"
@@ -310,7 +359,7 @@
    "id": "ac6cdee3-a002-4b35-8e95-056376c871b4",
    "metadata": {},
    "source": [
-    "### Ejercicio 2:\n",
+    "### Ejercicio 3:\n",
     "\n",
     "1. Probar la solucion anterior con el siguiente modelo:https://huggingface.co/Recognai/bert-base-spanish-wwm-cased-xnli. Analizar el resultado y los problemas que tiene.\n",
     "\n",
@@ -326,7 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Solucion Ejercicio 2: {display-mode:\"form\"}\n",
+    "#@title Solucion Ejercicio 3: {display-mode:\"form\"}\n",
     "\n",
     "# Aqui veremos que el modelo funciona mas rapido al estar en la\n",
     "# GPU (device=0) que al estar en la CPU (device=-1)\n",
@@ -343,10 +392,33 @@
     "accuracy = 0\n",
     "for i in range(N):\n",
     "    result = clasificador(df.iloc[i,:][\"Titulo\"],posibles_clases)\n",
-    "    print(f\"{i}: Real:{df.iloc[i,:]['Genero']} Predecido:{result['labels'][0]}\")\n",
+    "    print(f\"{i}: Real:{df.iloc[i,:]['Genero']} Predicho:{result['labels'][0]}\")\n",
     "    if df.iloc[i,:]['Genero'] == result['labels'][0]:\n",
     "        accuracy += 1\n",
     "print(f\"Total accuracy:{accuracy/N}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed454569-ec8d-4541-8811-b2f02fb798f3",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 4:\n",
+    "\n",
+    "Puedes usar el siguiente codigo para entrenar tu propia red neuronal para clasificacion de imagenes?\n",
+    "\n",
+    "https://github.com/nateraw/huggingpics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab4c5f9b-aaae-4824-9635-b24084448317",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
    ]
   },
   {
@@ -383,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
