--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -49,7 +49,7 @@
    "id": "f2ce9646-b950-436b-a20d-45fb59a6e620",
    "metadata": {},
    "source": [
-    "#### Vision\n",
+    "### Vision\n",
     "\n",
     "Si necesitamos trabajar con imagenes entonces la categoria vision nos clasifica los modelos preentrenados para realizar las siguientes tareas:\n",
     "\n",
@@ -114,10 +114,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d55c0f4-8a16-4b8a-8c99-f932a169b7d2",
+   "metadata": {},
+   "source": [
+    "#### Ejercicio 1:\n",
+    "\n",
+    "Intentar clasificar las [imagenes de bananas maduras](https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/bananas/) y frescas utilizando el modelo anterior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d14a3610-ac99-4338-8875-29a25ed858aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b3408ea-a7d0-45dc-b997-49ca1abc1c94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1:\n",
+    "\n",
+    "from transformers import pipeline\n",
+    "clasificador = pipeline(\"image-classification\", model=\"google/vit-base-patch16-224\")\n",
+    "\n",
+    "# Lista de nombres de las imagenes\n",
+    "nombres_imagenes = [f'normal{i}.jpeg' for i in range(1,6)]\n",
+    "nombres_imagenes.extend([f'madura{i}.jpeg' for i in range(1,6)])\n",
+    "PATH = 'https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/bananas/'\n",
+    "for nombre_imagen in nombres_imagenes:\n",
+    "    predictions = clasificador(PATH + nombre_imagen, top_k=1)\n",
+    "    print(nombre_imagen, predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1ee60368-dd83-42a7-aae5-cbef3d9ec84b",
    "metadata": {},
    "source": [
-    "#### Procesamiento de Lenguaje Natural\n",
+    "### Procesamiento de Lenguaje Natural\n",
     "\n",
     "Si necesitamos trabajar con texto entonces la categoria vision nos clasifica los modelos preentrenados para realizar las siguientes tareas:\n",
     "\n",
@@ -174,10 +216,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cb831f32-760f-412e-b1d6-70a6da495b4a",
+   "metadata": {},
+   "source": [
+    "#### Ejercicio 2:\n",
+    "\n",
+    "Intentar clasificar las peliculas de comedia y terror utilizando un modelo de text classification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9d7ece3d-3b0b-48c1-8efc-80ca8bee3d09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "40c4e863-ae23-49df-972f-300f1df1df4c",
    "metadata": {},
    "source": [
-    "#### Audio\n",
+    "### Audio\n",
     "\n",
     "Si necesitamos trabajar con audio entonces la categoria vision nos clasifica los modelos preentrenados para realizar las siguientes tareas:\n",
     "\n",
@@ -221,7 +285,7 @@
    "id": "19a0aec3-e307-46b8-b614-a3bf3ca943b5",
    "metadata": {},
    "source": [
-    "#### Multimodal\n",
+    "### Multimodal\n",
     "\n",
     "Si necesitamos trabajar con una conbinacion de imagenes, texto y audio entonces la categoria vision nos clasifica los modelos preentrenados para realizar las siguientes tareas:\n",
     "\n",
@@ -295,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
