--- a/cursos/espanol/deeplearning/4_finetuning_autotrain.ipynb
+++ b/cursos/espanol/deeplearning/4_finetuning_autotrain.ipynb
@@ -213,6 +213,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "69f4b1f5-75fe-4a28-a81b-f32d668550c4",
+   "metadata": {},
+   "source": [
+    "## Otras formas de utilizar AutoTrain\n",
+    "\n",
+    "Esta forma de utilizar AutoTrain en HuggingFace solo nos brinda la posibilidad de utilizar gratuitamente un CPU sin mucho poder de computo. Las opciones que tenemos para realizar finetuning que necesite mas poder de computo son las siguientes:\n",
+    "1. [Utilizar AutoTrain desde Google Colab](https://github.com/huggingface/autotrain-advanced?tab=readme-ov-file#run-on-colab-or-hugging-face-spaces)\n",
+    "2. [Ejecutar AutoTrain en nuestro ordenador utilizando pip o Docker](https://github.com/huggingface/autotrain-advanced?tab=readme-ov-file#local-installation)\n",
+    "3. [Pagar a HuggingFace por un servidor con GPU](https://huggingface.co/pricing#spaces)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "94244657-107f-4e36-9d08-88ba57823f71",
    "metadata": {},
    "source": [
@@ -236,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
