--- a/cursos/espanol/deeplearning/6_gradio.ipynb
+++ b/cursos/espanol/deeplearning/6_gradio.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Gradio\n",
     "\n",
-    "Aqui veremos como utilizar la libreria Gradio para poder crear una App para que otros puedan acceder a nuestros programas de Deep Learning mediante una pagina web."
+    "Aqui veremos como utilizar la libreria Gradio para poder crear un Chat Bot para proveer nuestros servicios de Deep Learning mediante una pagina web."
    ]
   },
   {
@@ -41,28 +41,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07dd1d58-9bda-47f0-9384-c04c5f7509dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def saludo(nombre, intensidad):\n",
-    "    return \"Hola, \" + nombre + \"!\" * int(intensidad)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1fe65e54-120b-4543-95fa-df7ff324e345",
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo = gr.Interface(\n",
-    "    fn=saludo,\n",
-    "    inputs=[\"text\", \"slider\"],\n",
-    "    outputs=[\"text\"],\n",
-    "    allow_flagging='never'\n",
-    ")\n",
-    "demo.launch(share=True)"
+    "import random\n",
+    "import gradio as gr\n",
+    "\n",
+    "def alternatingly_agree(message, history):\n",
+    "    if len(history) % 2 == 0:\n",
+    "        return f\"Yes, I do think that '{message}'\"\n",
+    "    else:\n",
+    "        return \"I don't think so\"\n",
+    "\n",
+    "gr.ChatInterface(alternatingly_agree).launch()"
    ]
   },
   {
@@ -70,24 +62,9 @@
    "id": "68c5813b-6e44-4836-9126-6c06d1418496",
    "metadata": {},
    "source": [
-    "## Componentes\n",
+    "## Personalizar el ChatBot\n",
     "\n",
-    "Los componentes pueden usarse como inputs y outputs\n",
-    "\n",
-    "https://www.gradio.app/docs/gradio/introduction\n",
-    "\n",
-    "Veamos ahora como utilizar uno de ellos, el [Textbox](https://www.gradio.app/docs/textbox):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a510a6d-2974-4d74-9d08-700df4c78f36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mi_input = gr.Textbox(label=\"Nombre\", placeholder=\"Cual es tu nombre?\")\n",
-    "mi_output = gr.Textbox(label=\"Salida\", lines=10)"
+    "https://www.gradio.app/guides/creating-a-chatbot-fast#customizing-your-chatbot"
    ]
   },
   {
@@ -97,53 +74,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo = gr.Interface(\n",
-    "    fn=saludo,\n",
-    "    inputs=[mi_input, \"slider\"],\n",
-    "    outputs=[mi_output],\n",
-    "    allow_flagging='never'\n",
+    "import gradio as gr\n",
+    "\n",
+    "def yes_man(message, history):\n",
+    "    if message.endswith(\"?\"):\n",
+    "        return \"Yes\"\n",
+    "    else:\n",
+    "        return \"Ask me anything!\"\n",
+    "\n",
+    "demo = gr.ChatInterface(\n",
+    "    yes_man,\n",
+    "    chatbot=gr.Chatbot(height=300),\n",
+    "    textbox=gr.Textbox(placeholder=\"Ask me a yes or no question\", container=False, scale=7),\n",
+    "    title=\"Yes Man\",\n",
+    "    description=\"Ask Yes Man any question\",\n",
+    "    theme=\"soft\",\n",
+    "    examples=[\"Hello\", \"Am I cool?\", \"Are tomatoes vegetables?\"],\n",
+    "    cache_examples=True,\n",
+    "    retry_btn=None,\n",
+    "    undo_btn=\"Delete Previous\",\n",
+    "    clear_btn=\"Clear\",\n",
     ")\n",
-    "demo.launch(share=True)"
+    "\n",
+    "demo.launch()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "541fc097-9fea-4f5e-b631-5b95d7197603",
+   "id": "07f825c7-9f94-41e0-9a61-ceb492550196",
    "metadata": {},
    "source": [
-    "### Ejercicio 1: \n",
+    "## Añadir la posibilidad de subir archivos\n",
     "\n",
-    "Personalizar el slider para que tenga un valor de 10 por defecto y su label sea \"Intensidad!!\""
+    "https://www.gradio.app/guides/creating-a-chatbot-fast#add-multimodal-capability-to-your-chatbot"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a85687b-8abb-4b8e-b6c3-a8e12aa6874a",
+   "id": "79895d57-32df-4361-9640-f9c06a58617b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Escribir aqui la solucion\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a9b1af5-be1e-495d-b76b-f193dd765ecc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Solucion Ejercicio 1: {display-mode:\"form\"}\n",
+    "import gradio as gr\n",
+    "import time\n",
     "\n",
-    "mi_slider = gr.Slider(label=\"Intensidad!!\",value=10)\n",
-    "demo = gr.Interface(\n",
-    "    fn=saludo,\n",
-    "    inputs=[mi_input, mi_slider],\n",
-    "    outputs=[mi_output],\n",
-    "    allow_flagging='never'\n",
-    ")\n",
-    "demo.launch(share=True)"
+    "def count_files(message, history):\n",
+    "    num_files = len(message[\"files\"])\n",
+    "    return f\"You uploaded {num_files} files\"\n",
+    "\n",
+    "demo = gr.ChatInterface(fn=count_files, \n",
+    "                        examples=[{\"text\": \"Hello\", \"files\": []}], \n",
+    "                        title=\"Echo Bot\", \n",
+    "                        multimodal=True)\n",
+    "\n",
+    "demo.launch()"
    ]
   },
   {
@@ -151,29 +136,11 @@
    "id": "01bef726-00cf-48c7-900a-54f505d3daea",
    "metadata": {},
    "source": [
-    "## Personalizar la interfaz con Blocks\n",
+    "## Personalizar el Chat Bot con Bloques\n",
     "\n",
-    "Un Block (bloque) puede tener filas, columnas, pestañas, grupos y acordiones. Esto permite crear nuestra propia interfaz personalizada.\n",
+    "Aqui podemos ver como personalizar el chatbot con bloques de gradio:\n",
     "\n",
-    "https://www.gradio.app/docs/blocks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11dcc41b-5542-4c6a-a561-b65daa4cd354",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "URL = \"https://docs.google.com/spreadsheets/d/1UOJpVKe34vsgSLPHPA9mBxMhb6kWp7Be1pgjO3jaJO4/export?format=csv\"\n",
-    "def get_data():\n",
-    "    return pd.read_csv(URL)\n",
-    "\n",
-    "def update(year):\n",
-    "    df = get_data()\n",
-    "    ventas = df[df.Fecha == int(year)].Ventas.values[0]\n",
-    "    return f\"Las ventas para {year} fueron: {ventas}\""
+    "https://www.gradio.app/guides/creating-a-custom-chatbot-with-blocks"
    ]
   },
   {
@@ -183,53 +150,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with gr.Blocks() as demo:\n",
-    "    with gr.Row():\n",
-    "        with gr.Column(scale=1):\n",
-    "            mi_input = gr.Textbox()\n",
-    "            btn = gr.Button(\"Buscar\")\n",
-    "            mi_output = gr.Textbox()\n",
-    "        with gr.Column(scale=4):\n",
-    "            gr.DataFrame(get_data)\n",
-    "    btn.click(fn=update, inputs=mi_input, outputs=mi_output)\n",
-    "    \n",
-    "demo.launch(share=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "197ddb6d-4be2-4459-8d86-865b33e9f33e",
-   "metadata": {},
-   "source": [
-    "## Graficos\n",
+    "import gradio as gr\n",
     "\n",
-    "Gradio tambien nos permite crear graficos como [scaterplots](https://www.gradio.app/docs/scatterplot), de [barras](https://www.gradio.app/docs/barplot), de [lineas](https://www.gradio.app/docs/lineplot) y mas:\n",
+    "def add_message(history, message):\n",
+    "    for x in message[\"files\"]:\n",
+    "        history.append(((x,), None))\n",
+    "    if message[\"text\"] is not None:\n",
+    "        history.append((message[\"text\"], None))\n",
+    "    return history, gr.MultimodalTextbox(value=None, interactive=False)\n",
     "\n",
-    "https://www.gradio.app/docs/plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adb465e6-2bc2-4f6b-8eda-5030020d4674",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "URL = \"https://docs.google.com/spreadsheets/d/1UOJpVKe34vsgSLPHPA9mBxMhb6kWp7Be1pgjO3jaJO4/export?format=csv\"\n",
+    "def bot(history):\n",
+    "    history[-1][1] = \"Cool!\"\n",
+    "    return history\n",
     "\n",
-    "def get_data():\n",
-    "    return pd.read_csv(URL)\n",
+    "with gr.Blocks(fill_height=True) as demo:\n",
+    "    chatbot = gr.Chatbot(\n",
+    "        elem_id=\"chatbot\",\n",
+    "        bubble_full_width=False,\n",
+    "        scale=1,\n",
+    "    )\n",
     "\n",
-    "with gr.Blocks() as demo:\n",
-    "    gr.Markdown(\"# 📈 Grafico de lineas en tiempo real!\")\n",
-    "    with gr.Row():\n",
-    "        gr.LinePlot(get_data, every=5, \n",
-    "                    x=\"Fecha\", y=\"Ventas\", \n",
-    "                    y_title=\"Ventas ($ millones)\", \n",
-    "                    overlay_point=True, \n",
-    "                    width=300, height=300)\n",
+    "    chat_input = gr.MultimodalTextbox(interactive=True,\n",
+    "                                      file_count=\"multiple\",\n",
+    "                                      placeholder=\"Enter message or upload file...\", show_label=False)\n",
     "\n",
-    "demo.launch(share=True)"
+    "    chat_msg = chat_input.submit(add_message, [chatbot, chat_input], [chatbot, chat_input])\n",
+    "    bot_msg = chat_msg.then(bot, chatbot, chatbot, api_name=\"bot_response\")\n",
+    "    bot_msg.then(lambda: gr.MultimodalTextbox(interactive=True), None, [chat_input])\n",
+    "\n",
+    "demo.queue()\n",
+    "demo.launch()"
    ]
   },
   {
