--- a/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb
+++ b/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Solucion Ejercicio 1:\n",
+    "#@title Solucion Ejercicio 1: {display-mode:\"form\"}\n",
     "\n",
     "import requests\n",
     "from PIL import Image\n",
