--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Solucion Ejercicio 1:\n",
+    "#@title Solucion Ejercicio 1: {display-mode:\"form\"}\n",
     "\n",
     "from transformers import pipeline\n",
     "clasificador = pipeline(\"image-classification\", model=\"google/vit-base-patch16-224\")\n",
