--- a/cursos/espanol/datascience/anomaly_detection/Anomaly_Detection.ipynb
+++ b/cursos/espanol/datascience/anomaly_detection/Anomaly_Detection.ipynb
@@ -18,16 +18,13 @@
     "- [Paper](https://arxiv.org/abs/2206.09426)\n",
     "\n",
     "PyCaret Anomaly Detection:\n",
-    "- [Ejemplo](https://nbviewer.org/github/pycaret/pycaret/blob/master/tutorials/Tutorial%20-%20Anomaly%20Detection.ipynb)"
+    "- [Ejemplo](https://nbviewer.org/github/pycaret/pycaret/blob/master/tutorials/Tutorial%20-%20Anomaly%20Detection.ipynb)\n",
+    "\n",
+    "Kaggle Datasets:\n",
+    "- https://www.kaggle.com/datasets/mlg-ulb/creditcardfraud\n",
+    "- https://www.kaggle.com/datasets/what0919/intrusion-detection\n",
+    "- https://www.kaggle.com/datasets/boltzmannbrain/nab"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0c96d2d-80ab-4c6b-b63b-372e1d3551d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
