--- a/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Transformer Architecture\n",
     "\n",
-    "[Visualization](https://bbycroft.net/llm)\n",
+    "[Transformer Visualization](https://bbycroft.net/llm)\n",
+    "\n",
+    "[Attention Visualization](https://github.com/jessevig/bertviz)\n",
     "\n",
     "[Self Attention Layer Explanation by Sebastian Raschka](https://magazine.sebastianraschka.com/p/understanding-and-coding-self-attention)\n",
     "\n",
