--- a/cursos/espanol/deeplearning/llms/Ollama_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/llms/Ollama_Prompting.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1ea37c54-3075-435f-a48f-48f8fd1226c2",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4dc2d26a-c9a8-45f0-aa57-ff734ce689b8",
    "metadata": {},
    "outputs": [],
@@ -55,10 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2aae4ecf-63c5-4bcc-b95b-a985ffdcfe18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Hello! 👋 It's lovely to hear from you. What can I do for you today? 😊\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "generar_texto(\"Hello\")"
    ]
@@ -584,9 +595,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -598,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
