--- a/cursos/espanol/deeplearning/4_finetuning_autotrain.ipynb
+++ b/cursos/espanol/deeplearning/4_finetuning_autotrain.ipynb
@@ -166,7 +166,7 @@
     "Intentemos clasificar la siguiente imagen: https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/deeplearning/data/bananas/madura1.jpeg\n",
     "\n",
     "<div style=\"text-align:center\">\n",
-    "<img src=\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/deeplearning/data/bananas/madura1.jpeg\" width=\"200\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/deeplearning/data/bananas/banana.jpg\" width=\"200\"/>\n",
     "</div>"
    ]
   },
@@ -207,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/deeplearning/data/bananas/madura1.jpeg'\n",
+    "url = 'https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/deeplearning/data/bananas/banana.jpg'\n",
     "clasificador(images=url, top_k=2)"
    ]
   },
