--- a/cursos/espanol/deeplearning/exercises/exercises.ipynb
+++ b/cursos/espanol/deeplearning/exercises/exercises.ipynb
@@ -16,6 +16,8 @@
     "\n",
     "### [Kaggle: Contradictory, My Dear Watson](https://www.kaggle.com/competitions/contradictory-my-dear-watson)\n",
     "\n",
+    "## More\n",
+    "\n",
     "### [OpenAI Examples](https://github.com/openai/openai-cookbook/tree/main/examples)"
    ]
   }
