--- a/cursos/espanol/datascience/algorithms/E5_ensambles.ipynb
+++ b/cursos/espanol/datascience/algorithms/E5_ensambles.ipynb
@@ -51,7 +51,8 @@
    "id": "33a4a376-1027-43a3-81a6-bdba9354d488",
    "metadata": {},
    "source": [
-    "1. Clase MIT (Patrick Winston): https://ocw.mit.edu/courses/6-034-artificial-intelligence-fall-2010/resources/lecture-17-learning-boosting/"
+    "1. [Clase MIT (Patrick Winston) sobre ensembles y boosting](https://ocw.mit.edu/courses/6-034-artificial-intelligence-fall-2010/resources/lecture-17-learning-boosting/)\n",
+    "2. [Boosting Book](https://direct.mit.edu/books/oa-monograph/5342/BoostingFoundations-and-Algorithms)"
    ]
   },
   {
