--- a/cursos/espanol/deeplearning/4_finetuning_autotrain.ipynb
+++ b/cursos/espanol/deeplearning/4_finetuning_autotrain.ipynb
@@ -226,6 +226,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7544dadd",
+   "metadata": {},
+   "source": [
+    "## Como descargar imagenes de internet en cantidad\n",
+    "\n",
+    "Ver el siguiente link: https://github.com/nateraw/huggingpics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "94244657-107f-4e36-9d08-88ba57823f71",
    "metadata": {},
    "source": [
