--- a/cursos/espanol/deeplearning/llms/Ollama_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/llms/Ollama_Prompting.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Una vez instalado descargar y ejecutar un LLM mediante la terminal o ventana de comandos con el siguiente comando:\n",
     "```shell\n",
-    "ollama run gemma\n",
+    "ollama run qwen2:0.5b\n",
     "```\n",
     "\n",
     "Luego podemos empezar a ejecutar el siguiente codigo de python para interactuar con el modelo"
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generar_texto(prompt, model=\"gemma\"):\n",
+    "def generar_texto(prompt, model=\"qwen2:0.5b\"):\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
     "    response = ollama.chat(model=model, messages=messages)\n",
     "    return response['message']['content']"
