--- a/cursos/espanol/deeplearning/nn_architectures/E0_redes_neuronales.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E0_redes_neuronales.ipynb
@@ -949,7 +949,15 @@
     "- Neurona: https://en.wikipedia.org/wiki/Neuron#/media/File:Blausen_0657_MultipolarNeuron.png\n",
     "\n",
     "Otros recursos interesantes:\n",
-    "- [Operaciones matriciales de redes neuronales a mano](https://aibyhand.substack.com/t/advanced)"
+    "- [Guia para Ingenieros sobre Redes Neuronales](https://www.interdb.jp/dl/)\n",
+    "- [Operaciones matriciales de redes neuronales a mano](https://aibyhand.substack.com/t/advanced)\n",
+    "\n",
+    "Arquitecturas:\n",
+    "- [Convolucional](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/E2_Convolutional_Arch.ipynb)\n",
+    "- [Autoencoders](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/E3_Autoencoders_Arch.ipynb)\n",
+    "- [Diffusers](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/E4_Diffusers_Arch.ipynb)\n",
+    "- [Transformer](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb)\n",
+    "- [AlphaFold](https://elanapearl.github.io/blog/2024/the-illustrated-alphafold/)"
    ]
   },
   {
