--- a/cursos/espanol/mlops/Intro.ipynb
+++ b/cursos/espanol/mlops/Intro.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Machine Learning Operations\n",
     "\n",
-    "Lo que hay que saber para desarrollar apps de machine learning que funcionen en ambientes de produccion"
+    "Lo que hay que saber para desarrollar apps de machine learning que funcionen en ambientes de produccion\n",
+    "\n",
+    "https://harvard-edge.github.io/cs249r_book/"
    ]
   },
   {
@@ -19,17 +21,17 @@
     "- [An unbiased evaluation of environment management and packaging tools](https://alpopkes.com/posts/python/packaging_tools/)\n",
     "- [Video](https://www.youtube.com/watch?v=sxN-Iu-okdo)\n",
     "\n",
-    "## Python versions\n",
+    "### Python versions\n",
     "- [pyenv](https://github.com/pyenv/pyenv)\n",
     "\n",
-    "## Virtual Environments\n",
+    "### Virtual Environments\n",
     "- [venv](https://docs.python.org/3/library/venv.html)\n",
     "\n",
-    "## Instaladores\n",
+    "### Instaladores\n",
     "- [pip](https://pip.pypa.io/en/stable/)\n",
     "- [pipx](https://pipx.pypa.io/stable/installation/)\n",
     "\n",
-    "## All in one\n",
+    "### All in one\n",
     "- [Conda](https://docs.conda.io/en/latest/)\n",
     "- [Poetry](https://python-poetry.org/)\n",
     "- [Pixi](https://prefix.dev/)\n",
@@ -38,11 +40,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bca4d5b-8293-4ab5-b166-94621db6c4cf",
+   "cell_type": "markdown",
+   "id": "c3c6cb97",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Git\n",
+    "\n",
+    "- [Tutorial](https://colab.research.google.com/drive/11EPXUjESxiT1RV6p1pkeKYS8PJFkRNpk)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bc35de8",
+   "metadata": {},
+   "source": [
+    "## Docker\n",
+    "\n",
+    "- https://www.docker.com/play-with-docker/\n",
+    "- https://training.play-with-docker.com/\n",
+    "- https://labs.leaningtech.com/blog/mini-webvm-your-linux-box-from-dockerfile-via-wasm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65288976",
+   "metadata": {},
+   "source": [
+    "## ETL Frameworks\n",
+    "\n",
+    "- https://news.ycombinator.com/item?id=40723356\n",
+    "- https://amphi.ai/\n",
+    "- https://dlthub.com/\n",
+    "- https://hub.meltano.com/\n",
+    "- https://www.definite.app/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0d5b287",
+   "metadata": {},
    "source": []
   }
  ],
