--- a/cursos/espanol/deeplearning/llms/OpenAI_Assistants.ipynb
+++ b/cursos/espanol/deeplearning/llms/OpenAI_Assistants.ipynb
@@ -144,7 +144,7 @@
    "outputs": [],
    "source": [
     "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4\",\n",
+    "    model=\"gpt-3.5-turbo\",\n",
     "    messages=messages,\n",
     "    tools=tools,\n",
     "    tool_choice=\"auto\",\n",
@@ -259,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
