--- a/cursos/espanol/deeplearning/llms/Ollama_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/llms/Ollama_Prompting.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "1ea37c54-3075-435f-a48f-48f8fd1226c2",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "4dc2d26a-c9a8-45f0-aa57-ff734ce689b8",
    "metadata": {},
    "outputs": [],
@@ -55,53 +55,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "2aae4ecf-63c5-4bcc-b95b-a985ffdcfe18",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hello! 👋 It's lovely to hear from you. What can I do for you today? 😊\""
+       "'¡Hola! ¿Cómo puedo ayudarte hoy?'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "generar_texto(\"Hello\")"
+    "generar_texto(\"Hola\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "bc7230bb-16d4-49c9-a220-058e1d1b1e4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Te puedo ayudar en varios aspectos. ¿Qué te puede parecer a ti el año actual, por ejemplo? Por favor, indígete el año de tu nacimiento y luego podré proporcionarte información acerca del año en el cual estamos.'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "generar_texto(\"What is the current year?\")"
+    "generar_texto(\"En que año estamos?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "8d00b174-e6d6-48ee-a6f8-435cbdf9cb2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Como soy una inteligencia artificial, no tengo la capacidad de tener un nombre ni un个性 personal. Sin embargo, si quieres hacer referencia a mi, puedes decirme \"Hola\" o \"Bonjour\". Por favor proporcionar más detalles.'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "generar_texto(\"My name is Hernan\")"
+    "generar_texto(\"Mi nombre es Hernan. Como estas?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "b5ce3674-5e24-410d-bbad-c5facd02eb49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tu nombre se refiere a un nombre propio. ¿Podrías proporcionar más detalles para que pueda ayudarte mejor?'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "generar_texto(\"What is my name?\")"
+    "generar_texto(\"Cual es mi nombre?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8acd806a-0e4f-41e9-8db8-2fc49cfc70cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tu nombre es Hernán.'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generar_texto(\"Mi nombre es Hernan. Cual es mi nombre?\")"
    ]
   },
   {
@@ -140,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = f\"\"\"\n",
+    "text = \"\"\"\n",
     "Debes expresar lo que quieres que un modelo haga \\\n",
     "proporcionando instrucciones que sean lo más claras \\\n",
     "y específicas posibles. Esto guiará al modelo hacia la \\\n",
@@ -177,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = f\"\"\"\n",
+    "prompt = \"\"\"\n",
     "Genera una lista de tres títulos de libros inventados junto \\\n",
     "con sus autores y géneros.\n",
     "Proporciónalos en formato JSON con las siguientes claves:\n",
@@ -230,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_1 = f\"\"\"\n",
+    "text_1 = \"\"\"\n",
     "¡Hacer una taza de té es fácil! Primero, necesitas hervir \\\n",
     "un poco de agua. Mientras eso ocurre, toma una taza y coloca \\\n",
     "una bolsita de té en ella. Una vez que el agua esté lo \\\n",
@@ -267,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_2 = f\"\"\"\n",
+    "text_2 = \"\"\"\n",
     "El sol brilla con fuerza hoy, y los pájaros están cantando. \\\n",
     "Es un hermoso día para dar un paseo por el parque. Las flores \\\n",
     "están floreciendo y los árboles se mecen suavemente con la brisa. \\\n",
@@ -312,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = f\"\"\"\n",
+    "prompt = \"\"\"\n",
     "Tu tarea es responder con un estilo consistente.\n",
     "\n",
     "<niño>: Enséñame sobre la paciencia.\n",
@@ -370,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = f\"\"\"\n",
+    "text = \"\"\"\n",
     "En un encantador pueblo, los hermanos Jack y Jill emprendieron \\\n",
     "una misión para buscar agua de un pozo en lo alto de una colina.\\\n",
     "Mientras ascendían, cantando con alegría, la desgracia ocurrió: \\\n",
@@ -453,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = f\"\"\"\n",
+    "prompt = \"\"\"\n",
     "Determina si la solución del estudiante es correcta o no.\n",
     "\n",
     "Pregunta:\n",
@@ -495,7 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = f\"\"\"\n",
+    "prompt = \"\"\"\n",
     "Tu tarea es determinar si la solución del estudiante es correcta o no.\n",
     "Para resolver el problema haz lo siguiente:\n",
     "\n",
