--- a/cursos/espanol/deeplearning/llms/Ollama_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/llms/Ollama_Prompting.ipynb
@@ -527,7 +527,7 @@
     "Costo del terreno: 100x\n",
     "Costo del panel solar: 250x\n",
     "Costo de mantenimiento: 100,000 + 10x\n",
-    "Costo total: 100x + 250x + 100,000 + 10x = 360x + 100,000\n",
+    "Costo total: 100x + 250x + 100,000 + 10x = 450x + 100,000\n",
     "\"\"\"\n",
     "response = generar_texto(prompt)\n",
     "print(response)"
@@ -634,8 +634,12 @@
    "source": [
     "## Referencias:\n",
     "\n",
-    "- https://github.com/openai/openai-python\n",
-    "- https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers/"
+    "## Referencias:\n",
+    "- [Prompt engineering from OpenAI](https://platform.openai.com/docs/guides/prompt-engineering)\n",
+    "- [Best practices for prompt engineering with the OpenAI API](https://help.openai.com/en/articles/6654000-best-practices-for-prompt-engineering-with-the-openai-api)\n",
+    "- [Prompt engineering from Meta for Llama3](https://llama.meta.com/docs/how-to-guides/prompting/)\n",
+    "- [Libreria de Ollama para python](https://github.com/ollama/ollama-python)\n",
+    "- [Curso de Prompt Engineering para Programadores](https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers/)"
    ]
   },
   {
