--- a/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
+++ b/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
@@ -26,6 +26,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "834e28c3-4585-4ec9-bfb0-11e6f138abe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Dibujo enviado por Ana {display-mode:\"form\"}\n",
+    "\n",
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "velocidad(10)\n",
+    "\n",
+    "for x in range(25):\n",
+    "  color('yellow')\n",
+    "  adelante(10 * x)\n",
+    "  izquierda(90)\n",
+    "  adelante(10 * x)\n",
+    "  derecha(90)\n",
+    "  color('orange')\n",
+    "  adelante(10 * x)\n",
+    "  izquierda(90)\n",
+    "  adelante(10 * x)\n",
+    "  izquierda(90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3b334a91-3c46-4f06-af8a-c557a4db1913",
    "metadata": {},
    "outputs": [],
@@ -374,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
