--- a/cursos/espanol/deeplearning/llms/OpenAI_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/llms/OpenAI_Prompting.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generar_texto(prompt, model=\"gpt-3.5-turbo\"):\n",
+    "def generar_texto(prompt, model=\"gpt-4o-mini\"):\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
     "    response = client.chat.completions.create(\n",
     "        model=model,\n",
@@ -207,21 +207,15 @@
     "\n",
     "Hacer zero shot de detección de spam utilizando las tacticas antes mencionadas y utilizando el conocimiento masivo que tiene comprimido chatgpt en su arquitectura de mas de 100 billones de parametros.\n",
     "\n",
-    "Para ello pedirle al modelo que reconozca si un texto es spam o que y especificar cual debe ser el formato de la respuesta. Utilizar la tactica de delimitar el texto que queremos analizar."
+    "Para ello pedirle al modelo que reconozca si un texto es spam o que y especificar cual debe ser el formato de la respuesta. Utilizar la tactica de delimitar el texto que queremos analizar.\n",
+    "\n",
+    "*Ayuda: hacerlo primero en chatgpt y luego pasarlo a codigo.*"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "712e6d7a-6bec-4857-bbe9-a90a83f4f382",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e6efae8-079a-4516-86ec-7abcb75f4d94",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -347,7 +341,9 @@
     "\n",
     "Hacer few shot clasification de tweets que son graciosos o no segun nuestro criterio. \n",
     "\n",
-    "Cuando utilizar esto y cuando finetunning de un modelo mas pequeño?"
+    "Cuando utilizar esto y cuando finetunning de un modelo mas pequeño?\n",
+    "\n",
+    "*Ayuda: hacerlo primero en chatgpt y luego pasarlo a codigo.*"
    ]
   },
   {
