--- a/cursos/espanol/deeplearning/llms/OpenAI_Assistants.ipynb
+++ b/cursos/espanol/deeplearning/llms/OpenAI_Assistants.ipynb
@@ -144,7 +144,7 @@
    "outputs": [],
    "source": [
     "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-3.5-turbo\",\n",
+    "    model=\"gpt-4o-mini\",\n",
     "    messages=messages,\n",
     "    tools=tools,\n",
     "    tool_choice=\"auto\",\n",
