--- a/cursos/espanol/mlops/Intro.ipynb
+++ b/cursos/espanol/mlops/Intro.ipynb
@@ -5,7 +5,7 @@
    "id": "7ce7c733-ffa5-4bb0-8689-34290b3aadd9",
    "metadata": {},
    "source": [
-    "# Machine Learning Operations\n",
+    "# Machine Learning Operations con Python\n",
     "\n",
     "Lo que hay que saber para desarrollar apps de machine learning que funcionen en ambientes de produccion\n",
     "\n",
@@ -26,17 +26,19 @@
     "\n",
     "### Virtual Environments\n",
     "- [venv](https://docs.python.org/3/library/venv.html)\n",
+    "- [virtualenv](https://virtualenv.pypa.io/en/latest/)\n",
     "\n",
     "### Instaladores\n",
     "- [pip](https://pip.pypa.io/en/stable/)\n",
     "- [pipx](https://pipx.pypa.io/stable/installation/)\n",
+    "- [uv](https://github.com/astral-sh/uv)\n",
     "\n",
     "### All in one\n",
-    "- [Conda](https://docs.conda.io/en/latest/)\n",
     "- [Poetry](https://python-poetry.org/)\n",
-    "- [Pixi](https://prefix.dev/)\n",
     "- [Rye](https://rye.astral.sh/)\n",
-    "- [Hatch](https://hatch.pypa.io/latest/)"
+    "- [Hatch](https://hatch.pypa.io/latest/)\n",
+    "- [Conda](https://docs.conda.io/en/latest/)\n",
+    "- [Pixi](https://prefix.dev/)"
    ]
   },
   {
@@ -47,6 +49,21 @@
     "## Git\n",
     "\n",
     "- [Tutorial](https://colab.research.google.com/drive/11EPXUjESxiT1RV6p1pkeKYS8PJFkRNpk)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e1f5aaa-9250-46a4-aa53-1be3b2b71b98",
+   "metadata": {},
+   "source": [
+    "## Testing\n",
+    "\n",
+    "- https://colab.research.google.com/drive/1Rmk_5jEhuefqFavpDLtteGqE8-R1qmZv\n",
+    "- [Unit testing](https://docs.python.org/3/library/unittest.html)\n",
+    "- [PyTest](https://github.com/pytest-dev/pytest/)\n",
+    "- [Integracion continua con GitHub Actions](https://docs.github.com/es/enterprise-cloud@latest/actions/automating-builds-and-tests/building-and-testing-python)\n",
+    "- [Integracion continua con GitHub Actions En ingles](https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python)\n",
+    "- [Testing con Rye](https://rye.astral.sh/guide/commands/test/)"
    ]
   },
   {
@@ -66,7 +83,7 @@
    "id": "65288976",
    "metadata": {},
    "source": [
-    "## ETL Frameworks\n",
+    "## ETL Pipelines y Frameworks\n",
     "\n",
     "- https://news.ycombinator.com/item?id=40723356\n",
     "- https://amphi.ai/\n",
