--- a/cursos/espanol/deeplearning/nn_architectures/E2_Convolutional_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E2_Convolutional_Arch.ipynb
@@ -7,15 +7,29 @@
    "source": [
     "# Redes Convolucionales\n",
     "\n",
-    "[Visualizacion](https://adamharley.com/nn_vis/)\n",
+    "Aqui proporciono enlaces para que los mas curiosos puedan entender en profundidad el funcionamiento de las redes convolucionales:\n",
     "\n",
-    "[Visualizacion con explicacion](https://poloclub.github.io/cnn-explainer/)\n",
+    "- [Visualizacion](https://adamharley.com/nn_vis/)\n",
+    "- [Visualizacion con explicacion](https://poloclub.github.io/cnn-explainer/)\n",
+    "- [NYU Deep Learning SP20](https://www.youtube.com/playlist?list=PLLHTzKZzVU9eaEyErdV26ikyolxOsz6mq)\n",
+    "- [Deep NN course by Francois Fleuret](https://fleuret.org/dlc/)\n",
+    "- [The little book of Deep Learning by Francois Fleuret](https://fleuret.org/public/lbdl.pdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cacb6115-8e60-44bc-843b-3340a38ca3bd",
+   "metadata": {},
+   "source": [
+    "## Redes Convolucionales en la Practica\n",
     "\n",
-    "[NYU Deep Learning SP20](https://www.youtube.com/playlist?list=PLLHTzKZzVU9eaEyErdV26ikyolxOsz6mq)\n",
+    "Aqui he creado tutoriales para crear las redes convolucionales en colab desde cero y tambien de como hacer finetunning usando keras y pytorch \n",
     "\n",
-    "[Deep NN course by Francois Fleuret](https://fleuret.org/dlc/)\n",
-    "\n",
-    "[The little book of Deep Learning by Francois Fleuret](https://fleuret.org/public/lbdl.pdf)"
+    "- [CNN con Keras](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/CNN_MNIST_Keras.ipynb)\n",
+    "- [CNN con Pytorch](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/CNN_MNIST_Pytorch.ipynb)\n",
+    "- [CNN Finetuning con Pytorch](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/CNN_MNIST_Pytorch_Finetuning1.ipynb)\n",
+    "- [CNN Finetuning 2 con Pytorch](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/CNN_MNIST_Pytorch_Finetuning2.ipynb)\n",
+    "- [CNN Finetuning usando Transforms con Pytorch](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/CNN_SnaksDB_Pytorch_Finetuning_with_Transforms.ipynb)"
    ]
   },
   {
@@ -43,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
