--- a/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
@@ -7,37 +7,46 @@
    "source": [
     "# Transformer Architecture\n",
     "\n",
-    "[Transformer Visualization](https://bbycroft.net/llm)\n",
+    "Aqui proporciono enlaces para que los mas curiosos puedan entender en profundidad el funcionamiento de las redes de tipo transformer:\n",
     "\n",
-    "[Attention Visualization](https://github.com/jessevig/bertviz)\n",
+    "- [Transformer Visualization](https://bbycroft.net/llm)\n",
+    "- [Attention Visualization](https://github.com/jessevig/bertviz)\n",
+    "- [Self Attention Layer Explanation by Sebastian Raschka](https://magazine.sebastianraschka.com/p/understanding-and-coding-self-attention)\n",
+    "- [Implement a transformer from scratch with pytorch by Andrej Karpathy (OpenAI, Stanford)](https://www.youtube.com/watch?v=kCc8FmEb1nY)\n",
+    "- [The Illustrated Transformer by Jay Alammar](https://jalammar.github.io/illustrated-transformer/)\n",
+    "- [Step by step without math by Miguel Grinberg](https://blog.miguelgrinberg.com/post/how-llms-work-explained-without-math)\n",
+    "- [Original Attention Is All You Need paper with code](https://nlp.seas.harvard.edu/2018/04/03/attention.html)\n",
     "\n",
-    "[Self Attention Layer Explanation by Sebastian Raschka](https://magazine.sebastianraschka.com/p/understanding-and-coding-self-attention)\n",
-    "\n",
-    "[Implement a transformer from scratch with pytorch by Andrej Karpathy (OpenAI, Stanford)](https://www.youtube.com/watch?v=kCc8FmEb1nY)\n",
-    "\n",
-    "[The Illustrated Transformer by Jay Alammar](https://jalammar.github.io/illustrated-transformer/)\n",
-    "\n",
-    "[Step by step without math by Miguel Grinberg](https://blog.miguelgrinberg.com/post/how-llms-work-explained-without-math)\n",
-    "\n",
-    "[Original Attention Is All You Need paper with code](https://nlp.seas.harvard.edu/2018/04/03/attention.html)\n",
-    "\n",
-    "[Deep NN course by Francois Fleuret](https://fleuret.org/dlc/)\n",
     "\n",
     "------------------------------\n",
     "\n",
-    "[CS224N: Natural Language Processing with Deep Learning\n",
+    "Cursos Completos:\n",
+    "\n",
+    "- [Deep NN course by Francois Fleuret](https://fleuret.org/dlc/)\n",
+    "- [CS224N: Natural Language Processing with Deep Learning\n",
     "Stanford / Spring 2024](https://web.stanford.edu/class/cs224n/)\n",
-    "\n",
-    "[Stanford CS224N: Natural Language Processing with Deep Learning | 2023](https://www.youtube.com/playlist?list=PLoROMvodv4rMFqRtEuo6SGjY4XbRIVRd4)\n",
-    "\n",
-    "[Stanford CS224N NLP with Deep Learning | 2023](https://www.youtube.com/playlist?list=PL613dYIGMXoZ0Wl6tj8VvHaFUTAWE8fbW)\n",
+    "- [Stanford CS224N: Natural Language Processing with Deep Learning | 2023](https://www.youtube.com/playlist?list=PLoROMvodv4rMFqRtEuo6SGjY4XbRIVRd4)\n",
+    "- [Stanford CS224N NLP with Deep Learning | 2023](https://www.youtube.com/playlist?list=PL613dYIGMXoZ0Wl6tj8VvHaFUTAWE8fbW)\n",
     "\n",
     "------------------------------\n",
     "\n",
-    "[Mapping the Mind of a Large Language Model by Anthropic](https://www.anthropic.com/news/mapping-mind-language-model)\n",
+    "Tratando de entender que conceptos crea una red tipo transformer\n",
     "\n",
-    "[Extracting Concepts from GPT-4\n",
+    "- [Mapping the Mind of a Large Language Model by Anthropic](https://www.anthropic.com/news/mapping-mind-language-model)\n",
+    "- [Extracting Concepts from GPT-4\n",
     "](https://openai.com/index/extracting-concepts-from-gpt-4/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee897cd3-4e8b-484b-b2c1-d32b87cd1975",
+   "metadata": {},
+   "source": [
+    "## Redes tipo Transformer en la Practica\n",
+    "\n",
+    "Aqui he creado tutoriales para hacer finetuning de redes neuronales tipo transformers y otros usos practicos:\n",
+    "\n",
+    "- [Transformer Finetuning con Pytorch](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/Transformer_Finetuning.ipynb)"
    ]
   },
   {
@@ -65,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
