--- a/cursos/espanol/deeplearning/nn_architectures/E4_Diffusers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E4_Diffusers_Arch.ipynb
@@ -15,7 +15,7 @@
     "id": "4ET4vo1TRFSM"
    },
    "source": [
-    "In this tutorial, you'll learn how to use models and schedulers to assemble a diffusion system for inference, starting with a basic pipeline and then progressing to the Stable Diffusion pipeline."
+    "En este tutorial veremos como funciona la aquitectura de las redes neuronales de tipo diffusers y esta basado en el tutorial de [HuggingFace](https://huggingface.co/docs/diffusers/using-diffusers/write_own_pipeline)"
    ]
   },
   {
@@ -908,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
