--- a/cursos/espanol/datascience/analysis/A1.0_graficos_seaborn.ipynb
+++ b/cursos/espanol/datascience/analysis/A1.0_graficos_seaborn.ipynb
@@ -617,7 +617,7 @@
     "El grafico de cajas nos permite ver los siguiente valores de una distribucion:\n",
     "\n",
     "<div style=\"text-align:center\">\n",
-    "<img src=\"img/boxplot.jpeg\" width=\"600\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/img/boxplot.jpeg\" width=\"600\"/>\n",
     "</div>\n",
     "\n",
     "[imagen obtenida de wikipedia](https://es.wikipedia.org/wiki/Diagrama_de_caja)\n",
