--- a/cursos/espanol/datascience/analysis/A1.1_graficos_matplotlib.ipynb
+++ b/cursos/espanol/datascience/analysis/A1.1_graficos_matplotlib.ipynb
@@ -75,7 +75,8 @@
    "source": [
     "## Anatomia de una figura\n",
     "\n",
-    "![Anatomia de una Figura](img/anatomy-matplotlib.png)"
+    "![Anatomia de una Figura](\n",
+    "https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/img/anatomy-matplotlib.png)"
    ]
   },
   {
@@ -1107,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
