--- a/cursos/espanol/cursos_recomendados.ipynb
+++ b/cursos/espanol/cursos_recomendados.ipynb
@@ -1,12 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f820a4c9-1e97-4dec-868d-60645c5b842b",
+   "cell_type": "markdown",
+   "id": "e56007bb-97af-4304-b3f9-78cd2be4ef35",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Cursos Recomendados:\n",
+    "\n",
+    "- https://michaelpyrcz.com/my-resources\n",
+    "- https://probml.github.io/pml-book/\n",
+    "- https://atcold.github.io/NYU-AISP24/"
+   ]
   }
  ],
  "metadata": {
