--- a/cursos/espanol/datascience/algorithms/E2_arbol.ipynb
+++ b/cursos/espanol/datascience/algorithms/E2_arbol.ipynb
@@ -219,7 +219,7 @@
     "\n",
     "Intuicion: queremos disminuir la entropia (que tan mezcladas estan las clases). Para ello vamos eligiendo la columna que mejor separa los datos y la dividimos.\n",
     "\n",
-    "![Entropia](img/entropia.png)"
+    "![Entropia](../img/entropia.png)"
    ]
   },
   {
@@ -1173,7 +1173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
