--- a/cursos/espanol/datascience/algorithms/E1_knn.ipynb
+++ b/cursos/espanol/datascience/algorithms/E1_knn.ipynb
@@ -34,7 +34,7 @@
     "Implementemos primero la funcion de distancia. Para ello utilizaremos la super conocida funcion de distancia que se deduce del Teorema de Pitagoras:\n",
     "\n",
     "<div style=\"text-align:center\">\n",
-    "<img src=\"img/pitagoras.png\" width=\"300\"/>\n",
+    "<img src=\"../img/pitagoras.png\" width=\"300\"/>\n",
     "</div>\n",
     "\n",
     "Que cuando los datos (vectores) tienen mas de dos dimensiones se define de la siguiente manera:\n",
@@ -387,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
