--- a/cursos/espanol/datascience/algorithms/E5_ensambles.ipynb
+++ b/cursos/espanol/datascience/algorithms/E5_ensambles.ipynb
@@ -16,7 +16,7 @@
     "El concepto de ensamble es simple pero muy poderoso. Supongamos que tenemos tres cajas negras las cuales no son muy buenas pero que se equivocan en distintos conjuntos como vemos en la figura:\n",
     "\n",
     "<div style=\"text-align:center\">\n",
-    "<img src=\"img/ensamble.png\" width=\"600\"/>\n",
+    "<img src=\"../img/ensamble.png\" width=\"600\"/>\n",
     "</div>\n",
     "\n",
     "Si como clasificador final utilizamos el voto de las tres cajas entonces obtendremos una clasificacion con 100% de efectividad en este caso ya que cuando se equivoque la caja 1 las cajas 2 y 3 acertaran.\n",
@@ -80,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
